# SuportGeoSurvey

./: dockerfile  pyproject.toml  requiments.txt  runtime.txt
GeoSunvey/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
GeoSunvey/migrations/: 0001_initial.py  0002_alter_ocorrencia_file.py  0003_licençadeserie.py  0004_alter_licençadeserie_options_licençageomax.py  0005_licençasurpad.py  0006_alter_licençasurpad_options_licençaxpad.py  0007_licençasurvx.py  0008_alter_licençasurvx_options_licençaaplitop.py  0009_kitlocacao.py
GeoSunvey/templates/: acrecentoatender.html  addmeta.html  addvenda.html  atender.html  createXPAD.html  createcliente.html  createkitlocacao.html  createlicencaAplitop.html  createlicencageomax.html  createlicencaserie.html  createlicencasurpad.html  createlicencasurvx.html  createproduto.html  createtipoprodutos.html  date_resultado.html  deletarlicenca.html  delete_cliente.html  delete_meta.html  delete_ocorrencia.html  delete_venda.html  edit_cliente.html  edit_meta.html  edit_ocorrencia.html  edit_venda.html  editproduto.html  home.html  kitlocacao.html  kitlocacaoEspecifica.html  licencaAplitop.html  licencaAplitopEspecifica.html  licencaEdita.html  licencaSurpad.html  licencaSurpadEspecifica.html  licencaSurvXEspecifica.html  licencaSurvx.html  licencaXPAD.html  licencaXPADEspecifica.html  licencageomax.html  licencageomaxEspecifica.html  licencaserie.html  (+11 more)
accounts/: urls.py  views.py
accounts/templates/usuario/: login.html
config/: settings.py  urls.py
templates/: base.html
templates/static/css/: atender.css  (+24 more)
