[tool.poetry]
name = "suporte"
version = "0.1.0"
description = ""
authors = ["Fabianbatistasilva <currifabianbatista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
fontawesomefree = "^6.2.1"
pytest = "^7.2.1"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"
pillow = "^9.4.0"
rich = "13.1.0"
aiohttp = "3.7.4.post0"
aiosignal = "1.3.1"
pipenv-to-requirements = "0.9.0"
mypy = "0.991"
virtualenv = "20.17.1"
pipenv = "^2022.12.19"
flake8 = "^6.0.0"
yarl = "^1.8.2"
tqdm = "^4.64.1"
setuptools = "^67.0.0"
asgiref='3.5.2'
certifi='2022.9.24'
charset-normalizer='2.1.1'
Django='4.1.2'
djangorestframework='3.14.0'
dr-scaffold='2.1.2'
idna='3.4'
inflect='6.0.0'
isort='5.10.1'
psycopg2='2.9.4'
pydantic='1.10.2'
pytz='2022.5'
requests='2.28.1'
sqlparse='0.4.3'
typing_extensions='4.4.0'
tzdata='2022.5'
urllib3='1.26.12'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[app]
type = "python"
start_command = "gunicorn config.wsgi:application --bind 0.0.0.0:$PORT"
build_command = "pip install -r requirements.txt"
[build]
command = "poetry install"
[services.django]
type = "postgres"

[services.static]
type = "static"
path = "staticfiles"